--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -9,156 +9,236 @@
 	<body>
 		<section>
 			<header>
-				<h1>Guillaume Ory</h1>
-				<h2>Développeur Web en formation</h2>
-				<p>
-					33, rue Paul Diacre <br>
-					57000 Metz <br>
-					(+33)6 62 13 66 66<br>
-					go281182-arobase-gmail.com<br>
-					GitHub: <a href="https://github.com/GuillaumeIfa">GuillaumeIfa</a><br>
-				</p>
+				<div class="conteneur">
+					<h1 class="sm1 md1 lg1">Guillaume Ory</h1>
+				</div>
+				<div class="conteneur">
+					<h2 class="sm1 md1 lg1">Développeur Web en formation</h2>
+				</div>
+				<div class="conteneur">
+					<div class="sm1 md1 lg1">
+						33, rue Paul Diacre <br>
+						57000 Metz <br>
+						(+33)6 62 13 66 66<br>
+						go281182-arobase-gmail.com<br>
+						GitHub: <a href="https://github.com/GuillaumeIfa">GuillaumeIfa</a><br>
+					</div>
+				</div>
 			</header>
 		</section>
-		<nav>
-			<ul>
-				<li><a href="./index.html#experiences">Expériences Professionnelles</a></li>
-				<li><a href="./index.html#formations">Formations</a></li>
-				<li><a href="./index.html#competences">Compétences</a></li>
-				<li><a href="./index.html#centres">Centres d'Intérêt</a></li>
-				<li><a href="./index.html#langues">Langues</a></li>
-				<li><a href="./index.html#formulaire">Contact</a></li>
-			</ul>
-		</nav>
+			<nav>
+				<ul>
+					<li><a href="./index.html#experiences">Expériences Professionnelles</a></li>
+					<li><a href="./index.html#formations">Formations</a></li>
+					<li><a href="./index.html#competences">Compétences</a></li>
+					<li><a href="./index.html#centres">Centres d'Intérêt</a></li>
+					<li><a href="./index.html#langues">Langues</a></li>
+					<li><a href="./index.html#formulaire">Contact</a></li>
+				</ul>
+			</nav>
+		<span id="experiences"></span>
 		<section>
-			<header>
-				<h3 id="experiences">Expériences Professionnelles</h3>
-			</header>
-			<article>
-				<h4>Cinemeccanica, Montreuil -- <i>Technicien de maintenance</i></h4>
-				<p>
-					2016<br>
-					Maintenance et installation de projecteurs numériques
-				</p>
-			</article>
-			<article>
-				<h4>CinéCentre, Metz -- <i>Responsable Technique & Informatique</i></h4>
-				<p>
-					2001 => 2016<br>
-					Gestion des projections (Programmation, Gestion logistique, Branchement multimédia, Création de DCP (Digital Cinema Package))<br>
-					Création, mise en place et Gestion du site internet (cinema-palace-cameo-metz.fr), Dépannage informatique
-				</p>
-			</article>
-			<article>
-				<h4>Agence Intérim, Meuse -- <i>Divers</i></h4>
-				<p>
-					2000 => 2001<br>
-					Divers postes de manutention, menuiserie.
-				</p>
-			</article>
-		</section>
-		<section>
-			<header>
-				<h3 id="formations">Formations</h3>
-			</header>
-			<article>
-				<h4>IFA, Metz -- <i>Formation Professionelle</i></h4>
-				<p>
-					2018<br>
-					Remise à noveau Informatique (HTML, CSS, PHP)
-				</p>
-			</article>
-			<article>
-				<h4>Atelier Igloo, Villers-les-Nancy -- <i>Formation Profesionnelle</i></h4>
-				<p>
-					2014<br>
-					Webdesigner (Bases HTML, CSS, Joomla, The Gimp)
-				</p>
-			</article>
-			<article>
-				<h4>Formats6, Metz -- Projection Numérique</h4>
-				<p>
-					2012<br>
-					Perfectionnement à la technique du cinéma numérique.
-				</p>
-			</article>
-			<article>
-				<h4>Lycée Pro L.Richier, Bar-le-Duc -- <i>BEP Menuiserie</i></h4>
-				<p>
-					1999
-				<p>
-			</article>
-		</section>
-		<section>
-			<header>
-				<h3 id="competences">Compétences</h3>
-			</header>
-			<div class="turn">
-				HTML
+			<div class="conteneur">
+				<header>
+					<h3>Expériences Professionnelles</h3>
+				</header>
 			</div>
-			<div class="turn">
-				CSS
+			<div class="conteneur">
+				<article>
+					<h4>Cinemeccanica, Montreuil -- <i>Technicien de maintenance</i></h4>
+					<p>
+						2016<br>
+						Maintenance et installation de projecteurs numériques
+					</p>
+				</article>
 			</div>
-			<div class="turn">
-				PHP
+			<div class="conteneur">
+				<article>
+					<h4>CinéCentre, Metz -- <i>Responsable Technique & Informatique</i></h4>
+					<p>
+						2001 => 2016<br>
+						Création, mise en place et Gestion du site internet (cinema-palace-cameo-metz.fr), Dépannage informatique
+						Gestion des projections (Programmation, Gestion logistique, Branchement multimédia, Création de DCP (Digital Cinema Package))<br>
+					</p>
+				</article>
 			</div>
-			<ul>
-				<li>Logiciels Libres & Linux</li>
-				<li>Maintenance Informatique</li>
-				<li>Vidéoprojection, Projection Numérique</li>
-				<li>Gestion Technique d'un bâtiment</li>
-			</ul>
+			<div class="conteneur">
+				<article>
+					<h4>Agence Intérim, Meuse -- <i>Divers</i></h4>
+					<p>
+						2000 => 2001<br>
+						Divers postes de manutention, menuiserie.
+					</p>
+				</article>
+			</div>
 		</section>
+		<span id="formations"></span>
 		<section>
-			<header>
-				<h3 id="centres">Centres d'Intérêt</h3>
-			</header>
-			<ul>
-				<li>Linux & Logiciels Libres</li>
-				<li>(The Gimp, LibreOffice, Debian, FramaSoft)</li>
-				<li>Musique (écoute et pratique dans plusieurs groupes (musique électronique, blues, musique hawaïenne, pop, musique expérimentale), organisation de concerts)</li>
-				<li>Électronique (réalisation de pédales d’effets, modification de circuit)</li>
-			</ul>
+			<div class="conteneur">
+				<header>
+					<h3>Formations</h3>
+				</header>
+			</div>
+			<div class="conteneur">
+				<article>
+					<h4>IFA, Metz -- <i>Formation Professionelle</i></h4>
+					<p>
+						2018 => 2019<br>
+						Développeur Web (PHP, JavaScript, Angular, MySql)
+					</p>
+				</article>
+			</div>
+			<div class="conteneur">
+				<article>
+					<h4>Atelier Igloo, Villers-les-Nancy -- <i>Formation Profesionnelle</i></h4>
+					<p>
+						2014<br>
+						Webdesigner (Bases HTML, CSS, Joomla, The Gimp)
+					</p>
+				</article>
+			</div>
+			<div class="conteneur">
+				<article>
+					<h4>Formats6, Metz -- Projection Numérique</h4>
+					<p>
+						2012<br>
+						Perfectionnement à la technique du cinéma numérique.
+					</p>
+				</article>
+			</div>
+			<div class="conteneur">
+				<article>
+					<h4>Lycée Pro L.Richier, Bar-le-Duc -- <i>BEP Menuiserie</i></h4>
+					<p>
+						1999
+					</p>
+				</article>
+			</div>
 		</section>
+		<span id="competences"></span>
 		<section>
-			<header>
-				<h3 id="langues">Langues</h3>
-			</header>
+			<div class="conteneur">
+				<header>
+					<h3>Compétences</h3>
+				</header>
+			</div>
+			<div class="conteneur">
+				<div class="turn turn0 sm1 md4 lg4">
+					HTML
+				</div>
+				<div class="turn turn1 sm1 md4 lg4">
+					CSS
+				</div>
+				<div class="turn turn2 sm1 md4 lg4">
+					PHP
+				</div>
+			</div>
+			<div class="conteneur">
+				<div class="js js0">
+					J
+				</div>
+				<div class="js js1">
+					A
+				</div>
+				<div class="js js2">
+					V
+				</div>
+				<div class="js js3">
+					A
+				</div>
+				<div class="js js4">
+					S
+				</div>
+				<div class="js js0">
+					C
+				</div>
+				<div class="js js1">
+					R
+				</div>
+				<div class="js js2">
+					I
+				</div>
+				<div class="js js3">
+					P
+				</div>
+				<div class="js js4">
+					T
+				</div>
+			</div>
+			<div class="conteneur">
+				<ul>
+					<li>Logiciels Libres & Linux</li>
+					<li>Maintenance Informatique</li>
+					<li>Vidéoprojection, Projection Numérique</li>
+					<li>Gestion Technique d'un bâtiment</li>
+				</ul>
+			</div>
+		</section>
+		<span id="centres"></span>
+		<section>
+			<div class="conteneur">
+				<header>
+					<h3>Centres d'Intérêt</h3>
+				</header>
+			</div>
+			<div class="conteneur">
+				<ul>
+					<li>Linux & Logiciels Libres</li>
+					<li>(The Gimp, LibreOffice, Debian, FramaSoft)</li>
+					<li>Musique (écoute et pratique dans plusieurs groupes (musique électronique, blues, musique hawaïenne, pop, musique expérimentale), organisation de concerts)</li>
+					<li>Électronique (réalisation de pédales d’effets, modification de circuit)</li>
+				</ul>
+			</div>
+		</section>
+		<span id="langues"></span>
+		<section>
+			<div class="conteneur">
+				<header>
+					<h3>Langues</h3>
+				</header>
+			</div>
+			<div class="conteneur">
 				<ul>
 					<li>Anglais: Lu & Parlé</li>
 					<li>Espagnol: Notions</li>
 				</ul>
+			</div>
 		</section>
+		<span id="formulaire"></span>
 		<section>
-			<header>
-				<h3 id="formulaire">Formulaire de Contact</h3>
-			</header>
-			<form action="index.html" method="POST">
-				<label for="nom">Nom:</label><br>
-				<input type="text" name="nom" id="nom"><br>
-				<label for="prenom">Prenom:</label><br>
-				<input type="text" name="prenom" id="prenom"><br>
-				<label for="courriel">Courriel:</label><br>
-				<input type="email" name="courriel" id="courriel"><br>
-				<label>Motif du message:</label>
-				<input type="radio" name="radio" value="renseignement">Renseignements 
-				<input type="radio" name="radio" value="embauche">Embauche 
-				<input type="radio" name="radio" value="insulte">Insultes <br><br>
-				<label for="sujet">Sujet:</label><br>
-				<input type="text" name="sujet" id="sujet"><br><br>
-				<label for="pays">Pays</label>
-				<select name="pays" id="pays">
-					<option value="france">France</option>
-					<option value="belgique">Belgique</option>
-					<option value="suisse">Suisse</option>
-					<option value="luxembourg">Luxembourg</option>
-					<option value="allemagne">Allemagne</option>
-				</select><br><br>
-				<label for="message">Message:</label><br>
-				<textarea name="message" id="message" cols="30" rows="10" placeholder="Entrez votre message"></textarea><br>
-				<input type="button" value="Envoyer !">
-				<input type="reset">
-			</form>
+			<div class="conteneur">
+				<header>
+					<h3>Formulaire de Contact</h3>
+				</header>
+			</div>
+			<div class="conteneur">
+				<form action="index.html" method="POST">
+					<label for="nom">Nom:</label><br>
+					<input type="text" name="nom" id="nom"><br>
+					<label for="prenom">Prenom:</label><br>
+					<input type="text" name="prenom" id="prenom"><br>
+					<label for="courriel">Courriel:</label><br>
+					<input type="email" name="courriel" id="courriel"><br>
+					<label>Motif du message:</label>
+					<input type="radio" name="radio" value="renseignement">Renseignements 
+					<input type="radio" name="radio" value="embauche">Embauche 
+					<input type="radio" name="radio" value="insulte">Insultes <br><br>
+					<label for="sujet">Sujet:</label><br>
+					<input type="text" name="sujet" id="sujet"><br><br>
+					<label for="pays">Pays</label>
+					<select name="pays" id="pays">
+						<option value="france">France</option>
+						<option value="belgique">Belgique</option>
+						<option value="suisse">Suisse</option>
+						<option value="luxembourg">Luxembourg</option>
+						<option value="allemagne">Allemagne</option>
+					</select><br><br>
+					<label for="message">Message:</label><br>
+					<textarea name="message" id="message" cols="30" rows="10" placeholder="Entrez votre message"></textarea><br>
+					<a href="mailto:gllmr@tutanota.com"><input type="button" value="Envoyer !"></a>
+					<input type="reset">
+				</form>
+			</div>
 		</section>
 
 		<footer>GllmR_2019</footer>
