--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -21,12 +21,14 @@
 						57000 Metz <br>
 						(+33)6 62 13 66 66<br>
 						go281182-arobase-gmail.com<br>
-						GitHub: <a href="https://github.com/GuillaumeIfa">GuillaumeIfa</a><br>
+						<div class="haut">
+							GitHub: <a href="https://github.com/GuillaumeIfa">GuillaumeIfa</a>
+						</div><br>
 					</div>
 				</div>
 			</header>
 		</section>
-			<nav>
+			<nav class="print">
 				<ul>
 					<li><a href="./index.html#experiences">Expériences Professionnelles</a></li>
 					<li><a href="./index.html#formations">Formations</a></li>
@@ -149,19 +151,19 @@
 				<div class="js js4">
 					S
 				</div>
-				<div class="js js0">
+				<div class="js js4">
 					C
 				</div>
-				<div class="js js1">
+				<div class="js js3">
 					R
 				</div>
 				<div class="js js2">
 					I
 				</div>
-				<div class="js js3">
+				<div class="js js1">
 					P
 				</div>
-				<div class="js js4">
+				<div class="js js0">
 					T
 				</div>
 			</div>
@@ -205,7 +207,7 @@
 			</div>
 		</section>
 		<span id="formulaire"></span>
-		<section>
+		<section class="print">
 			<div class="conteneur">
 				<header>
 					<h3>Formulaire de Contact</h3>
