--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -237,7 +237,7 @@
 					</select><br><br>
 					<label for="message">Message:</label><br>
 					<textarea name="message" id="message" cols="30" rows="10" placeholder="Entrez votre message"></textarea><br>
-					<a href="mailto:gllmr@tutanota.com"><input type="button" value="Envoyer !"></a>
+					<a href="mailto:gllmr@tutanota.com"><input type="button" value="Envoyer !"></a> <!-- Erreur au W3 because no PHP -->
 					<input type="reset">
 				</form>
 			</div>
