Rectification nom CSS queuleuleu

--- a/ExerciceAnimationCSS/faireLaQueue.html
+++ b/ExerciceAnimationCSS/faireLaQueue.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="./SCRIPT/FaireLaQueue.css">
+	<link rel="stylesheet" href="./SCRIPT/faireLaQueue.css">
 	<title>FaireLaQueue</title>
 </head>
 <body>
